--- a/Plantshare/.gitignore
+++ b/Plantshare/.gitignore
@@ -15,3 +15,10 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Ignore node modules
+node_modules
+
+# Ignore bundle
+bundle.js
+bundle.js.map
