--- a/Plantshare/package.json
+++ b/Plantshare/package.json
@@ -18,10 +18,10 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "6.24.0",
     "babel-preset-react": "6.23.0",
-    "react": "^16.0.0-alpha.6",
+    "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-modal": "1.7.3",
-    "react-native": "^0.43.1",
+    "react-native": "^0.40.0",
     "react-native-cli": "^2.0.1",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git",
     "react-redux": "5.0.3",
