--- a/Plantshare/package.json
+++ b/Plantshare/package.json
@@ -23,6 +23,7 @@
     "react-modal": "1.7.3",
     "react-native": "^0.40.0",
     "react-native-cli": "^2.0.1",
+    "react-native-simple-auth": "^2.0.1",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git",
     "react-redux": "5.0.3",
     "react-router": "3.0.2",
