--- a/Plantshare/Gemfile
+++ b/Plantshare/Gemfile
@@ -27,6 +27,7 @@ gem 'jquery-rails'
 gem 'jbuilder', '~> 2.5'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 3.0'
+gem 'rails_12factor'
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
 
