--- a/Plantshare/package.json
+++ b/Plantshare/package.json
@@ -8,7 +8,12 @@
   },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "webpack"
+  },
+  "engines": {
+    "node": "7.6.0",
+    "npm": "4.1.2"
   },
   "keywords": [],
   "author": "",
