--- a/Plantshare/test/fixtures/requests.yml
+++ b/Plantshare/test/fixtures/requests.yml
@@ -8,6 +8,7 @@
 #  comment    :text
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  status     :string           default("pending"), not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
